# omg

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml
.github/workflows/: deploy-frontend.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  audio.py  generation.py
backend/app/db/: __init__.py  queue_db.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  job_manager.py  lyrics_service.py  model_client.py  prompt_builder.py
frontend/: .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/images/: README.md
frontend/src/: App.vue  style.css
frontend/src/components/: ArchitectureDiagram.vue  MusicForm.vue  MusicPlayer.vue  Navigation.vue  QueueView.vue  WaveText.vue
frontend/src/fonts/: README.md
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: Architecture.vue  Background.vue  Home.vue  Links.vue
model-service/: Dockerfile  README.md  pyproject.toml
model-service/app/: __init__.py  compat.py  core.py  main.py
model-service/app/api/: __init__.py  generation.py
model-service/app/models/: __init__.py  ace_step.py  base.py  mistral_lyrics.py  song_generation.py
model-service/app/services/: generation_job.py
samples/: README.md
