[project]
name = "model-service"
version = "0.1.0"
description = "ACE-Step model service for music generation"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "accelerate>=0.20.0",
    "scipy>=1.10.0",
    "audioread>=3.0.0",
    "transformers>=4.35.0",
    "spacy @ git+https://github.com/explosion/spaCy.git@release-v3.8.4",
    "ace-step @ git+https://github.com/ace-step/ACE-Step.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tools.uv]
required-environments = "sys_platform == 'linux' and platform_machine == 'aarch64'"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
